unpackaged/main/default/objects/Account/fields/Gearset_field_test__c.field-meta.xml
<CustomField>
        <fullName>Gearset_field_test__c</fullName>
        <label>Gearset field test</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>