unpackaged/main/default/objects/Account/fields/RICSC_Active__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not boutique is still operating</description>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>