unpackaged/main/default/objects/Account/fields/RICSC_Age__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Age__c</fullName>
        <description>Calculate age based on the date of birth (e.g. 12th May 1988 as of 14th Aug 2019 should be 31)</description>
        <formula>IF(  AND(NOT( ISBLANK( PersonBirthdate )), Date(1920,12,31) &lt; PersonBirthdate),
  IF( DATE( 2000 , MONTH( PersonBirthdate ) , DAY( PersonBirthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( PersonBirthdate ),
     YEAR (Today()) - YEAR ( PersonBirthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>