unpackaged/main/default/objects/Account/fields/RICSC_AverageBasket__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AverageBasket__c</fullName>
        <description>Calculated field indicating the value of the average shopping session of the client</description>
        <label>Average Basket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>