unpackaged/main/default/objects/Account/fields/RICSC_CanBeContacted__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CanBeContacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LR: value retrieved from SAP regarding customer permission to be contacted by Richemont.
GR: Populated based on rules.</description>
        <label>Can Be Contacted</label>
        <type>Checkbox</type>
    </CustomField>