unpackaged/main/default/objects/Account/fields/RICSC_CARSleepingNonVIP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CARSleepingNonVIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAR Sleeping non-VIP</label>
        <type>Checkbox</type>
    </CustomField>