unpackaged/main/default/objects/Account/fields/RICSC_CARSleepingVIP__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CARSleepingVIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAR Sleeping VIP</label>
        <type>Checkbox</type>
    </CustomField>