unpackaged/main/default/objects/Account/fields/RICSC_CCPFirstAccessOn__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CCPFirstAccessOn__c</fullName>
        <description>First time contact accessed CCP</description>
        <label>CCPFirstAccessOn</label>
        <type>DateTime</type>
    </CustomField>