unpackaged/main/default/objects/Account/fields/RICSC_CCPLastAccessOn__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CCPLastAccessOn__c</fullName>
        <description>Last time contact accessed CCP</description>
        <label>CCPLastAccessOn</label>
        <type>DateTime</type>
    </CustomField>