unpackaged/main/default/objects/Account/fields/RICSC_CCPLatestOptInDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CCPLatestOptInDate__c</fullName>
        <description>Most recent date that contact opted in on CCP</description>
        <label>CCPLatestOptInDate</label>
        <type>DateTime</type>
    </CustomField>