unpackaged/main/default/objects/Account/fields/RICSC_CCPLatestOptOutDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CCPLatestOptOutDate__c</fullName>
        <description>Most recent date that contact opted out on CCP</description>
        <label>CCPLatestOptOutDate</label>
        <type>DateTime</type>
    </CustomField>