unpackaged/main/default/objects/Account/fields/RICSC_ClassCode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClassCode__c</fullName>
        <description>Client segment based on rules in SAP</description>
        <label>Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boutique Client</fullName>
                </value>
                <value>
                    <fullName>Boutique Service client</fullName>
                </value>
                <value>
                    <fullName>Cartier Call Center Prospect</fullName>
                </value>
                <value>
                    <fullName>Cartier Customer Service</fullName>
                </value>
                <value>
                    <fullName>Cartier Prospect</fullName>
                </value>
                <value>
                    <fullName>Cartier Prospect Multichannel</fullName>
                </value>
                <value>
                    <fullName>Cartier Retail</fullName>
                </value>
                <value>
                    <fullName>Cartier Retail Mutlichannel Customer</fullName>
                </value>
                <value>
                    <fullName>Cartier Retail Web Customer</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Charity Client</fullName>
                </value>
                <value>
                    <fullName>Contact Center Client</fullName>
                </value>
                <value>
                    <fullName>Contact Center Retail Client</fullName>
                </value>
                <value>
                    <fullName>Contact Center Service Client</fullName>
                </value>
                <value>
                    <fullName>Customer Service Client</fullName>
                </value>
                <value>
                    <fullName>E-Commerce Client</fullName>
                </value>
                <value>
                    <fullName>Multi-Channel Client</fullName>
                </value>
                <value>
                    <fullName>Multi-channel Retail Client</fullName>
                </value>
                <value>
                    <fullName>Multi-channel Service Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Prospect Boutique</fullName>
                </value>
                <value>
                    <fullName>Prospect contact center</fullName>
                </value>
                <value>
                    <fullName>Prospect Partnership</fullName>
                </value>
                <value>
                    <fullName>Prospect Web</fullName>
                </value>
                <value>
                    <fullName>Prospect Web Cartier</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Web Client</fullName>
                </value>
                <value>
                    <fullName>Web Retail Client</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>