unpackaged/main/default/objects/Account/fields/RICSC_ClientFlag__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClientFlag__c</fullName>
        <description>Client categorization based on perceived value (what level of VIP)</description>
        <label>Client Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top VIP</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Potential VIP</fullName>
                </value>
                <value>
                    <fullName>GOAL – Top</fullName>
                </value>
                <value>
                    <fullName>GOAL – Local</fullName>
                </value>
                <value>
                    <fullName>GOAL – Potential</fullName>
                </value>
                <value>
                    <fullName>GOAL+ – Existing HE</fullName>
                </value>
                <value>
                    <fullName>GOAL+ – Non-HE client</fullName>
                </value>
                <value>
                    <fullName>GOAL+ – Prospect</fullName>
                </value>
                <value>
                    <fullName>Loyal</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>SAV</fullName>
                </value>
                <value>
                    <fullName>Richemont Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Family-Richemont Board of Directors</fullName>
                </value>
                <value>
                    <fullName>VIP1</fullName>
                    <isActive>false</isActive>
                    <label>VIP1</label>
                </value>
                <value>
                    <fullName>VIP2</fullName>
                    <isActive>false</isActive>
                    <label>VIP2</label>
                </value>
                <value>
                    <fullName>VIP5</fullName>
                    <isActive>false</isActive>
                    <label>VIP5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>