unpackaged/main/default/objects/Account/fields/RICSC_ClientID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This external ID identifies the client in SAP</description>
        <externalId>true</externalId>
        <label>Sap ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>