unpackaged/main/default/objects/Account/fields/RICSC_ClientPurchaseChannel__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClientPurchaseChannel__c</fullName>
        <label>Client Purchase Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Multichannel</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>