unpackaged/main/default/objects/Account/fields/RICSC_ClientSegment__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ClientSegment__c</fullName>
        <description>Client classification based on rules in SAP</description>
        <label>Client Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access 0-6 U05</fullName>
                </value>
                <value>
                    <fullName>Access 7-12 U10</fullName>
                </value>
                <value>
                    <fullName>Access Accessories</fullName>
                </value>
                <value>
                    <fullName>Access Bijoux</fullName>
                </value>
                <value>
                    <fullName>Access Frequent E10</fullName>
                </value>
                <value>
                    <fullName>Access Frequent E13</fullName>
                </value>
                <value>
                    <fullName>Access Frequent E2</fullName>
                </value>
                <value>
                    <fullName>Access Frequent E6</fullName>
                </value>
                <value>
                    <fullName>Access New N5</fullName>
                </value>
                <value>
                    <fullName>Access One Shot E4</fullName>
                </value>
                <value>
                    <fullName>Access One Shot E8</fullName>
                </value>
                <value>
                    <fullName>Access One Time Buyer E3</fullName>
                </value>
                <value>
                    <fullName>Access One Time Buyer E6</fullName>
                </value>
                <value>
                    <fullName>Access Regular E11</fullName>
                </value>
                <value>
                    <fullName>Access Regular E14</fullName>
                </value>
                <value>
                    <fullName>Access Regular E3</fullName>
                </value>
                <value>
                    <fullName>Access Regular E7</fullName>
                </value>
                <value>
                    <fullName>Access Repeater E2</fullName>
                </value>
                <value>
                    <fullName>Access Repeater E5</fullName>
                </value>
                <value>
                    <fullName>Access Super frequent E1</fullName>
                </value>
                <value>
                    <fullName>Access Super frequent E12</fullName>
                </value>
                <value>
                    <fullName>Access Super Frequent E4</fullName>
                </value>
                <value>
                    <fullName>Access Super frequent E5</fullName>
                </value>
                <value>
                    <fullName>Access Super frequent E9</fullName>
                </value>
                <value>
                    <fullName>Access Watch</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>Active Clients 20K</fullName>
                </value>
                <value>
                    <fullName>Active - Elegant</fullName>
                </value>
                <value>
                    <fullName>Active - Frequent</fullName>
                </value>
                <value>
                    <fullName>Active - Occasional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>