unpackaged/main/default/objects/Account/fields/RICSC_CollectionOfInterests__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CollectionOfInterests__c</fullName>
        <description>Multi-selection of: client interests and Maison (e.g. Watches JLC)</description>
        <label>Collection Of Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Antique Pieces</fullName>
                </value>
                <value>
                    <fullName>Ballet/Opera</fullName>
                </value>
                <value>
                    <fullName>Bridal</fullName>
                </value>
                <value>
                    <fullName>Bridal jewellery</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Collector</fullName>
                </value>
                <value>
                    <fullName>Complications</fullName>
                </value>
                <value>
                    <fullName>Design/Architecture</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Enameling</fullName>
                </value>
                <value>
                    <fullName>Engraving</fullName>
                </value>
                <value>
                    <fullName>Estate Pieces</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Fashion/Couture</fullName>
                </value>
                <value>
                    <fullName>Fine Watchmaking</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Gastronomy/Wine</fullName>
                </value>
                <value>
                    <fullName>Gem-Setting</fullName>
                </value>
                <value>
                    <fullName>Generic function</fullName>
                </value>
                <value>
                    <fullName>Heritage/Craftsmanship</fullName>
                </value>
                <value>
                    <fullName>High Jewellery</fullName>
                </value>
                <value>
                    <fullName>Jewellery</fullName>
                </value>
                <value>
                    <fullName>Lady</fullName>
                </value>
                <value>
                    <fullName>Leather Goods</fullName>
                </value>
                <value>
                    <fullName>Limited series</fullName>
                </value>
                <value>
                    <fullName>Love</fullName>
                </value>
                <value>
                    <fullName>Nature/Gardens</fullName>
                </value>
                <value>
                    <fullName>New creations</fullName>
                </value>
                <value>
                    <fullName>Pens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>