unpackaged/main/default/objects/Account/fields/RICSC_ConsentTimestamp__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ConsentTimestamp__c</fullName>
        <description>Technical Field -  to indicate the timestamp of the last consent update</description>
        <label>Consent Timestamp</label>
        <type>DateTime</type>
    </CustomField>