unpackaged/main/default/objects/Account/fields/RICSC_CountryofResidence__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CountryofResidence__c</fullName>
        <description>Picklist field to indicate the country of residence</description>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Country</valueSetName>
        </valueSet>
    </CustomField>