unpackaged/main/default/objects/Account/fields/RICSC_CreatingBoutique__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CreatingBoutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Boutique that created the account</description>
        <label>Creating Boutique</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Creating Boutiques</relationshipLabel>
        <relationshipName>RICSC_AccountCreatingBoutique</relationshipName>
        <type>Lookup</type>
    </CustomField>