unpackaged/main/default/objects/Account/fields/RICSC_DataOrigin__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DataOrigin__c</fullName>
        <description>System where the client was first created</description>
        <label>Data Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BTQ</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>CDB</fullName>
                </value>
                <value>
                    <fullName>Chinese Customers From France</fullName>
                </value>
                <value>
                    <fullName>Cmt Creation</fullName>
                </value>
                <value>
                    <fullName>Creation In Boutique</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EVEN</fullName>
                </value>
                <value>
                    <fullName>EXHI</fullName>
                </value>
                <value>
                    <fullName>MUSE</fullName>
                </value>
                <value>
                    <fullName>PART</fullName>
                </value>
                <value>
                    <fullName>PGT</fullName>
                </value>
                <value>
                    <fullName>SOCM</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
                <value>
                    <fullName>Web Creation</fullName>
                </value>
                <value>
                    <fullName>WGT</fullName>
                </value>
                <value>
                    <fullName>WLI</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>