unpackaged/main/default/objects/Account/fields/RICSC_DC8DigitCombinedPhones__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DC8DigitCombinedPhones__c</fullName>
        <description>Rollup of all the phones' last 8 digit from the phone object. Used for Duplicate Check scenarios.</description>
        <label>DC 8-digit Combined Phones</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>