unpackaged/main/default/objects/Account/fields/RICSC_DC8DigitPhonesGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DC8DigitPhonesGoldenRecords__c</fullName>
        <description>Rollup of the 8 digits numbers of a phone from the Phone object of Golden Records. Used for Duplicate Check scenarios.</description>
        <label>DC 8-digit Phones - Golden Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>