unpackaged/main/default/objects/Account/fields/RICSC_DC8DigitPhonesLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DC8DigitPhonesLocalRecords__c</fullName>
        <description>Rollup of all the 8 digits numbers of a phone from the Phone object of Local Records. Used for Duplicate Check scenarios.</description>
        <label>DC 8-digit Phones - Local Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>