unpackaged/main/default/objects/Account/fields/RICSC_DCCity__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCity__c</fullName>
        <description>Rollup of the primary City. Logic: Concatenate values from Local And Golden fields</description>
        <label>DC City</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>