unpackaged/main/default/objects/Account/fields/RICSC_DCCityGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCityGoldenRecords__c</fullName>
        <description>Rollup of the primary City from Golden Record</description>
        <label>DC City - Golden Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>