unpackaged/main/default/objects/Account/fields/RICSC_DCCityLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCityLocalRecords__c</fullName>
        <description>Rollup of the primary City from Local Record</description>
        <label>DC City - Local Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>