unpackaged/main/default/objects/Account/fields/RICSC_DCCombinedEmail__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCombinedEmail__c</fullName>
        <description>Merge of all the emails from the Email object. Used for Duplicate Check scenarios.</description>
        <label>DC Combined Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>