unpackaged/main/default/objects/Account/fields/RICSC_DCCombinedPhone__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCombinedPhone__c</fullName>
        <description>Rollup of all the phones from the phone object. Used for Duplicate Check scenarios.</description>
        <label>DC Combined Phone</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>