unpackaged/main/default/objects/Account/fields/RICSC_DCCombinedSocialID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCombinedSocialID__c</fullName>
        <description>Merge of all the Social IDs from the Social Media ID object. Used for Duplicate Check scenarios</description>
        <label>DC Combined Social ID</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>