unpackaged/main/default/objects/Account/fields/RICSC_DCCountry__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCountry__c</fullName>
        <description>Rollup of the primary Country. Logic: Concatenate values from Local And Golden fields</description>
        <label>DC Country</label>
        <type>TextArea</type>
    </CustomField>