unpackaged/main/default/objects/Account/fields/RICSC_DCCountryGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCountryGoldenRecords__c</fullName>
        <description>Rollup of the primary Country from Golden Record</description>
        <label>DC Country - Golden Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>