unpackaged/main/default/objects/Account/fields/RICSC_DCCountryLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCCountryLocalRecords__c</fullName>
        <description>Rollup of the primary Country  from Local Record</description>
        <label>DC Country - Local Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>