unpackaged/main/default/objects/Account/fields/RICSC_DCEmailsGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCEmailsGoldenRecords__c</fullName>
        <description>Rollup of the emails from the Email object of Golden Records. Used for Duplicate Check scenarios</description>
        <label>DC Emails - Golden Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>