unpackaged/main/default/objects/Account/fields/RICSC_DCEmailsLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCEmailsLocalRecords__c</fullName>
        <description>Rollup of all the emails from the Email object of Local Records. Used for Duplicate Check scenarios.</description>
        <label>DC Emails - Local Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>