unpackaged/main/default/objects/Account/fields/RICSC_DCPhonesGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCPhonesGoldenRecords__c</fullName>
        <description>Rollup of the phone from the Phone object of Golden Records. Used for Duplicate Check scenarios.</description>
        <label>DC Phones - Golden Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>