unpackaged/main/default/objects/Account/fields/RICSC_DCPhonesLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCPhonesLocalRecords__c</fullName>
        <description>Rollup of all the phone from the Phone object of Local Records. Used for Duplicate Check scenarios.</description>
        <label>DC Phones - Local Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>