unpackaged/main/default/objects/Account/fields/RICSC_DCPostalCode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCPostalCode__c</fullName>
        <description>Rollup of the primary Postal Code Logic: Concatenate values from Local And Golden fields</description>
        <label>DC Postal Code</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>