unpackaged/main/default/objects/Account/fields/RICSC_DCPostalCodeGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCPostalCodeGoldenRecords__c</fullName>
        <description>Rollup of the primary Postal Code from Golden Record</description>
        <label>DC Postal Code - Golden Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>