unpackaged/main/default/objects/Account/fields/RICSC_DCPostalCodeLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCPostalCodeLocalRecords__c</fullName>
        <description>Rollup of the primary Postal Code  from Local Record</description>
        <label>DC Postal Code - Local Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>