unpackaged/main/default/objects/Account/fields/RICSC_DCSocialIDGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCSocialIDGoldenRecords__c</fullName>
        <description>Rollup of Social IDs from the Social Media ID object of Golden Records. Used for Duplicate Check scenarios</description>
        <label>DC Social ID - Golden Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>