unpackaged/main/default/objects/Account/fields/RICSC_DCSocialIDLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCSocialIDLocalRecords__c</fullName>
        <description>Rollup of all the Social IDs from the Social Media ID object of Local Records. Used for Duplicate Check scenarios.</description>
        <label>DC Social ID - Local Records</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>