unpackaged/main/default/objects/Account/fields/RICSC_DCStreetGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCStreetGoldenRecords__c</fullName>
        <description>Rollup of the primary Street from Golden Record</description>
        <label>DC Street - Golden Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>