unpackaged/main/default/objects/Account/fields/RICSC_DCStreetLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCStreetLocalRecords__c</fullName>
        <description>Rollup of the primary Street from Local Record</description>
        <label>DC Street - Local Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>