unpackaged/main/default/objects/Account/fields/RICSC_DCStreetNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCStreetNumber__c</fullName>
        <description>Rollup of the primary Street Number Local or Golden. Logic: Concatenate values from Local And Golden fields</description>
        <label>DC Street Number</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>