unpackaged/main/default/objects/Account/fields/RICSC_DCStreetNumberGoldenRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCStreetNumberGoldenRecords__c</fullName>
        <description>Rollup of the primary Street Number from Golden Record</description>
        <label>DC Street Number - Golden Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>