unpackaged/main/default/objects/Account/fields/RICSC_DCStreetNumberLocalRecords__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DCStreetNumberLocalRecords__c</fullName>
        <description>Rollup of the primary Street Number from Local Record</description>
        <label>DC Street Number- Local Records</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>