unpackaged/main/default/objects/Account/fields/RICSC_Division__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Division__c</fullName>
        <description>Customer division (marketing cluod)</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>