unpackaged/main/default/objects/Account/fields/RICSC_ECard__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ECard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the customer has been created using the eCard (i.e. no paper card for its consent</description>
        <label>E Card</label>
        <type>Checkbox</type>
    </CustomField>