unpackaged/main/default/objects/Account/fields/RICSC_ElectronicContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ElectronicContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether this contact can be reached via electronic correspondance</description>
        <label>Electronic Contact</label>
        <type>Checkbox</type>
    </CustomField>